--- a/compiler_python.html
+++ b/compiler_python.html
@@ -1,1 +1,225 @@
-h
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.11.3/brython.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.11.3/brython_stdlib.js"></script>
+    <title>Python Compiler</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            height: 100vh;
+            width: 100vw;
+        }
+        #inputSection {
+            height: 100vh;
+            width: 100vw;
+        }
+        #highlight {
+            position: absolute;
+            width: 100%;
+            height: calc(100vh - 100px);
+            padding: 10px;
+            font-size: 16px;
+            font-family: cursive;
+            white-space: pre-wrap;
+            overflow-wrap: break-word;
+            pointer-events: none;
+        }
+        #pythonCode {
+            position: relative;
+            width: 100%;
+            height: calc(1000vh - 100px);
+            padding: 10px;
+            font-size: 16px;
+            font-family: monospace;
+            background-color: black;
+            color: cyan;
+            caret-color: white;
+            font-weight: bolder;
+        }
+        #outputSection {
+            display: none;
+        }
+        #pyOutput {
+            width: 100vw;
+            height: calc(1000vh - 50px);
+            background: #000;
+            color: #0f0;
+            font-family: monospace;
+            font-size: 18px;
+            padding: 10px;
+            overflow-y: auto;
+            border: none;
+        }
+        #i, #un, #backButton{
+            width: 65px;
+            height: 30px;
+            font-size: 16px;
+            cursor: pointer;
+            background: #146c76a0;
+            position: fixed;
+            top: 10px;
+            border-radius: 10px;
+            z-index: 1000;
+        }
+        #i, #backButton{right: 10px;}
+        .fas{font-size: 30px; color: #fff100cb; margin-left: 1px;}
+        #un{right: 90px;}
+        #myModal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 50px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: #ffffff1b;
+        }
+        .modal-content {
+            background-color: #ff2bf1;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 96%;
+        }
+        .buy, .close{background: #ffffff5a; color: #5cff40; font-size: 20px; height: 5%; font-weight: bolder; width: 40%; border-radius: 3px;  position: fixed; top: 460px;}
+        .buy{right: 200px;}
+        .close{right: 30px;}
+        #pkg{background: #eaeaff28; border: 1px solid #eaeaff57; text-align: center; font-weight: bolder; border-radius: 10px;
+          box-shadow: 0px 0px 10px black; margin-top: 1px;}
+        #crn{position: fixed;
+          right: 150px;
+          top: 115px;
+          font-size: 100px;
+        }
+        li{font-weight: bolder;}
+    </style>
+</head>
+<body onload="brython()">
+<div id="inputSection">
+    <button id="un" onclick="document.getElementById('myModal').style.display='block'"><i class="fas fa-globe"></i></button> 
+    <button id="i" onclick="runPython()"><i class="fas fa-play"></i></button>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <i id="crn" class="fas fa-crown"></i>
+            <h1 style="font-size: 40px; text-align: center; color: cyan;">𝖈𝖔𝖒𝖕𝖑𝖎𝖊𝖗 𝖕𝖗𝖊𝖒𝖎𝖚𝖒</h1> <br><br><br> <br>
+            <blockquote style="font-weight: bolder: text-align: center;">UPGRADE TO COMPLIER PRO TO ACCES VIEW FROM WEB</blockquote>
+            <ul>
+                <h2 style="color: red;">ᵒᵗʰᵉʳ ᵖʳᵉᵐⁱᵘᵐ ᶠᵉᵃᵗᵘʳᵉˢ</h2>
+                <li>Save file-Python file creator</li>
+                <li>Assistant-AI code helper</li>
+                <li>Console-Error Check</li>
+            </ul><br>
+            <div id="pkg">Annual Plan-$5<br><sup>5USD</sup></div><br>
+            <div id="pkg">Lifetime Plan-$10<br><sup>10USD</sup></div><br>
+            <button class="buy" onclick="alert('Service will be available soon')">BUY PLAN</button>
+            <button onclick="document.getElementById('myModal').style.display='none'" class="close">CONTINUE FREE</button>
+        </div>
+    </div>
+    <div style="position: relative;">
+        <textarea id="pythonCode" oninput="highlightCode()" value=""></textarea>
+        <div id="highlight"></div>
+    </div>
+</div>
+<div id="outputSection" style="display: none;">
+    <button id="backButton" onclick="goBack()"><i class="fas fa-edit"></i></button>
+    <pre id="pyOutput"></pre>
+</div>
+<!-- Brython runner -->
+<script type="text/python" id="bryRunner">
+from browser import document, stdout, alert
+import sys
+
+class OutputCatcher:
+    def __init__(self):
+        self.content = ""
+    def write(self, data):
+        self.content += str(data)
+        document['pyOutput'].text = self.content
+    def flush(self):
+        pass
+
+def run_python_code(ev):
+    code = document['pythonCode'].value
+    catcher = OutputCatcher()
+    sys.stdout = catcher
+    sys.stderr = catcher
+    try:
+        exec(code, {})
+    except Exception as e:
+        catcher.write(f"\n[Error] {e}\n")
+    sys.stdout = sys.__stdout__
+    sys.stderr = sys.__stderr__
+
+document['i'].bind('click', run_python_code)
+</script>
+<script>
+function runPython() {
+    const inputSection = document.getElementById('inputSection');
+    const outputSection = document.getElementById('outputSection');
+    inputSection.style.display = 'none';
+    outputSection.style.display = 'block';
+    // Brython will handle execution and output
+}
+
+function goBack() {
+    const inputSection = document.getElementById('inputSection');
+    const outputSection = document.getElementById('outputSection');
+    outputSection.style.display = 'none';
+    inputSection.style.display = 'block';
+}
+
+function highlightCode() {
+    const code = document.getElementById('pythonCode').value;
+    const highlight = document.getElementById('highlight');
+    // Simple Python keyword highlighter
+    let highlightedCode = code.replace(/(def|for|if|else|elif|return|import|from|class|try|except|print|while|with|as|break|continue|pass|in|is|not|and|or|lambda|global|yield)/g, '<span style="color: orange;">$1</span>');
+    highlightedCode = highlightedCode.replace(/(#.*)/g, '<span style="color: green;">$1</span>');
+    highlight.innerHTML = highlightedCode;
+}
+
+document.addEventListener('DOMContentLoaded', function() {
+    const initialCode = `# Welcome to Python Compiler!
+print("Hello, world!")
+# Write your Python code here...
+`;
+    document.getElementById('pythonCode').value = initialCode;
+    highlightCode();
+    document.getElementById('pythonCode').focus();
+    document.getElementById('pythonCode').setSelectionRange(initialCode.length - 1, initialCode.length - 1);
+});
+
+const buttons = document.querySelectorAll('button');
+buttons.forEach(button => {
+    let offsetX, offsetY;
+    button.addEventListener('mousedown', (e) => {
+        const rect = button.getBoundingClientRect();
+        offsetX = e.clientX - rect.left;
+        offsetY = e.clientY - rect.top;
+        button.style.position = 'fixed';
+        button.style.left = `${e.clientX - offsetX}px`;
+        button.style.top = `${e.clientY - offsetY}px`;
+        document.addEventListener('mousemove', moveHandler);
+        document.addEventListener('mouseup', upHandler);
+    });
+    const moveHandler = (e) => {
+        button.style.left = `${e.clientX - offsetX}px`;
+        button.style.top = `${e.clientY - offsetY}px`;
+    };
+    const upHandler = () => {
+        document.removeEventListener('mousemove', moveHandler);
+        document.removeEventListener('mouseup', upHandler);
+    };
+});
+</script>
+</body>
+</html>
