compiler_python.html

--- a/compiler_python.html
+++ b/compiler_python.html
@@ -50,8 +50,7 @@
         #pyOutput {
             width: 100vw;
             height: calc(1000vh - 50px);
-            background: #000;
-            color: #0f0;
+            color: blue;
             font-family: monospace;
             font-size: 18px;
             padding: 10px;
