--- a/barcode.html
+++ b/barcode.html
@@ -1,122 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Golden Apple Technologies Barcode Generator</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Golden Apple Barcode Generator</title>
+  <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <style>
     body {
-      background: #f8f9fa;
-      font-family: 'Montserrat', Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #fdfbfb, #ebedee);
+      margin: 0;
+      padding: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      margin: 0;
+      justify-content: center;
+      height: 100vh;
     }
+
     .container {
-      background: #fff;
-      margin-top: 60px;
-      padding: 30px 40px;
-      border-radius: 16px;
-      box-shadow: 0 2px 18px rgba(0,0,0,0.11);
-      width: 100%;
-      max-width: 400px;
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 500px;
       text-align: center;
     }
+
     h1 {
-      color: #2d7d46;
-      font-size: 2rem;
-      margin-bottom: 18px;
+      color: #34495e;
+      margin-bottom: 10px;
     }
-    label {
-      font-size: 1.1rem;
-      color: #333;
-      margin-bottom: 6px;
-      display: block;
-      font-weight: 600;
-    }
+
     input[type="text"] {
-      padding: 10px;
-      width: 85%;
-      border: 1px solid #c7c7c7;
+      width: 80%;
+      padding: 12px;
+      font-size: 16px;
+      border: 1px solid #ccc;
       border-radius: 8px;
-      font-size: 1rem;
-      margin-bottom: 18px;
-      outline: none;
-      transition: border 0.2s;
+      margin-bottom: 20px;
     }
-    input[type="text"]:focus {
-      border: 1.5px solid #2d7d46;
-    }
+
     button {
-      background: #2d7d46;
-      color: #fff;
+      padding: 12px 24px;
+      font-size: 16px;
       border: none;
-      padding: 10px 28px;
-      font-size: 1rem;
       border-radius: 8px;
       cursor: pointer;
-      font-weight: 600;
-      margin-bottom: 16px;
-      transition: background 0.2s;
+      background-color: #3498db;
+      color: white;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
-      background: #226135;
+      background-color: #2980b9;
     }
-    #barcode {
-      margin: 22px auto 16px auto;
-      display: block;
-      background: #f3f3f3;
-      padding: 12px;
-      border-radius: 8px;
+
+    .home-button {
+      margin-top: 15px;
+      background-color: #2ecc71;
     }
-    .home-btn {
-      display: inline-block;
-      margin-top: 16px;
-      background: #c9a245;
-      color: #fff;
-      padding: 8px 22px;
-      border-radius: 8px;
-      font-weight: 600;
-      text-decoration: none;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.10);
-      transition: background 0.2s;
+
+    .home-button:hover {
+      background-color: #27ae60;
     }
-    .home-btn:hover {
-      background: #a58732;
+
+    svg {
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Barcode Generator</h1>
-    <form id="barcodeForm" onsubmit="generateBarcode(); return false;">
-      <label for="barcodeInput">Enter Barcode Value:</label>
-      <input type="text" id="barcodeInput" placeholder="e.g. GAT-2025-001" required>
-      <br>
-      <button type="submit">Generate</button>
-    </form>
+    <h1>Golden Apple Barcode Generator</h1>
+    <p>Enter a value to generate its barcode:</p>
+    <input type="text" id="barcodeInput" placeholder="e.g. 1234567890" />
+    <br />
+    <button onclick="generateBarcode()">Generate Barcode</button>
+    <br />
     <svg id="barcode"></svg>
-    <a href="Golden.html" class="home-btn">Home</a>
+    <br />
+    <button class="home-button" onclick="location.href='Golden.html'">Home</button>
   </div>
 
-  <!-- JsBarcode CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/jsbarcode/dist/JsBarcode.all.min.js"></script>
   <script>
     function generateBarcode() {
-      var value = document.getElementById("barcodeInput").value;
-      JsBarcode("#barcode", value, {
+      const input = document.getElementById('barcodeInput').value;
+      if (input.trim() === '') {
+        alert('Please enter a value to generate the barcode.');
+        return;
+      }
+      JsBarcode("#barcode", input, {
         format: "CODE128",
-        lineColor: "#2d7d46",
-        width: 2.2,
-        height: 80,
-        displayValue: true,
-        fontSize: 20,
-        margin: 8
+        lineColor: "#000",
+        width: 2,
+        height: 100,
+        displayValue: true
       });
     }
   </script>
