--- a/iam.html
+++ b/iam.html
@@ -107,7 +107,7 @@
     // 20+ languages. Use fab where Font Awesome brand exists; otherwise use a tidy SVG fallback.
     const languages = [
       {name:'Python', type:'fab', class:'fa-python', desc:'Data, automation, web', file:'python.html'},
-      {name:'JavaScript', type:'fab', class:'fa-js-square', desc:'Frontend & backend', file:'javascript.html'},
+      {name:'JavaScript', type:'fab', class:'fa-js-square', desc:'Frontend & backend', file:'JavaScript.html'},
       {name:'HTML', type:'fab', class:'fa-html5', desc:'Markup', file:'html.html'},
       {name:'CSS', type:'fab', class:'fa-css3-alt', desc:'Styling', file:'css.html'},
       {name:'TypeScript', type:'fab', class:'fa-js', desc:'Typed JS', file:'typescript.html'},
