--- a/games.html
+++ b/games.html
@@ -96,9 +96,9 @@
     </div>
     <div class="card">
       <i class="fas fa-circle"></i>
-      <h2>Bubble Shooter</h2>
-      <p>Pop matching bubbles and clear the board in this arcade classic.</p>
-      <a href="bubble.html">Play Now</a>
+      <h2>Tic-tac toe</h2>
+      <p>Matching the Xs Goldie will match the Os, let's go to the challenge!</p>
+      <a href="tictac.html">Play Now</a>
     </div>
   </div>
 </body>
