--- a/games.html
+++ b/games.html
@@ -2,104 +2,120 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Golden Apple Gamers • Online Games</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Golden Apple Gamers Hub</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
+
     body {
-      font-family: 'Rajdhani', sans-serif;
-      background: #0f1117;
-      color: #fff;
       margin: 0;
-      padding: 2rem;
+      font-family: 'Quicksand', sans-serif;
+      background: linear-gradient(135deg, #fdf6e3, #e0f7fa);
+      color: #2e7d32;
     }
-    h1 {
+
+    header {
+      background: #43a047;
+      color: white;
+      padding: 20px;
       text-align: center;
       font-size: 2rem;
-      color: #ffd700;
-      margin-bottom: 2rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-    .grid {
+
+    .container {
+      padding: 30px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      max-width: 1000px;
-      margin: auto;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
     }
+
     .card {
-      background: #1a1c24;
-      border-radius: 1rem;
-      padding: 1.5rem;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      padding: 20px;
       text-align: center;
-      transition: transform 0.2s, box-shadow 0.2s;
+      transition: transform 0.3s;
     }
+
     .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 0 12px #ffd70055;
+      transform: scale(1.05);
     }
-    .card i {
-      font-size: 2rem;
-      color: #ffd700;
-      margin-bottom: 0.5rem;
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: #388e3c;
     }
-    .card h2 {
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
-    }
-    .card p {
-      font-size: 0.95rem;
-      color: #ccc;
-    }
-    .card a {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #ffd700;
-      color: #000;
-      font-weight: bold;
+
+    .card button {
+      background: #43a047;
+      color: white;
+      border: none;
+      padding: 10px 20px;
       border-radius: 6px;
-      text-decoration: none;
-      transition: background 0.2s;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s;
     }
-    .card a:hover {
-      background: #ffea70;
+
+    .card button:hover {
+      background: #2e7d32;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #c8e6c9;
+      font-size: 0.9rem;
+      color: #4e342e;
     }
   </style>
 </head>
 <body>
-  <h1><i class="fas fa-gamepad"></i> Golden Apple Gamers</h1>
-  <div class="grid">
+  <header>🍏 Golden Apple Gamers Hub</header>
+
+  <div class="container">
     <div class="card">
-      <i class="fas fa-puzzle-piece"></i>
-      <h2>Jigsaw Puzzles</h2>
-      <p>Piece together beautiful images and challenge your brain.</p>
-      <a href="jigsaw.html">Play Now</a>
+      <h3>Tic Tac Toe</h3>
+      <p>Challenge the bot or a friend!</p>
+      <button onclick="launchGame('tictac.html')">Play Now</button>
     </div>
     <div class="card">
-      <i class="fas fa-spell-check"></i>
-      <h2>Word Scramble</h2>
-      <p>Unscramble letters to form words and boost your vocabulary.</p>
-      <a href="scramble.html">Play Now</a>
+      <h3>Guess the Number</h3>
+      <p>Can you find the hidden number?</p>
+      <button onclick="launchGame('guess.html')">Play Now</button>
     </div>
     <div class="card">
-      <i class="fas fa-question-circle"></i>
-      <h2>Quiz</h2>
-      <p>Test your knowledge across multiple categories and levels.</p>
-      <a href="quiz.html">Play Now</a>
+      <h3>Quiz Game</h3>
+      <p>Test your knowledge and win!</p>
+      <button onclick="launchGame('quiz.html')">Play Now</button>
     </div>
     <div class="card">
-      <i class="fas fa-dice"></i>
-      <h2>Guess the Number</h2>
-      <p>Can you guess the secret number? Try your luck and logic!</p>
-      <a href="guess.html">Play Now</a>
+      <h3>Memory Match</h3>
+      <p>Test your memory skills!</p>
+      <button onclick="launchGame('memory.html')">Play Now</button>
     </div>
     <div class="card">
-      <i class="fas fa-circle"></i>
-      <h2>Tic-tac toe</h2>
-      <p>Matching the Xs Goldie will match the Os, let's go to the challenge!</p>
-      <a href="tictac.html">Play Now</a>
+      <h3>Leaderboard</h3>
+      <p>See who's topping the charts!</p>
+      <button onclick="launchGame('leaderboard.html')">View</button>
+    </div>
+    <div class="card">
+      <h3>Profile</h3>
+      <p>Customize your avatar and name</p>
+      <button onclick="launchGame('profile.html')">Edit</button>
     </div>
   </div>
+
+  <footer>
+    Powered by Golden Apple Technologies • Designed for joy and excellence
+  </footer>
+
+  <script>
+    function launchGame(url) {
+      window.location.href = url;
+    }
+  </script>
 </body>
 </html>
