--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="card card-platform p-4 text-center">
             <h5 class="card-title">LinkedIn</h5>
-            <a href="#" target="_blank" class="btn btn-warning">Connect With Us</a>
+            <a href="https://youtube.com/@gatech-sos?si=ASUbCHs6OnCEWLdl" target="_blank" class="btn btn-warning">Connect With Us</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
