--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="card card-platform p-4 text-center">
             <h5 class="card-title">TikTok</h5>
-            <a href="#" target="_blank" class="btn btn-warning">Watch @goldenappletech</a>
+            <a href="https://github.com/goldenapplecoders-coder" target="_blank" class="btn btn-warning">Watch @goldenappletech</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
