--- a/about.html
+++ b/about.html
@@ -164,25 +164,25 @@
         <div class="col-md-6 col-lg-4">
           <div class="card card-platform p-4 text-center">
             <h5 class="card-title">TikTok</h5>
-            <a href="https://github.com/goldenapplecoders-coder" target="_blank" class="btn btn-warning">Watch @goldenappletech</a>
+            <a href="#" target="_blank" class="btn btn-warning">Watch @goldenappletech</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card card-platform p-4 text-center">
             <h5 class="card-title">GitHub</h5>
-            <a href="#" target="_blank" class="btn btn-warning">Explore Our Repos</a>
+            <a href="https://github.com/goldenapplecoders-coder" target="_blank" class="btn btn-warning">Explore Our Repos</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card card-platform p-4 text-center">
             <h5 class="card-title">LinkedIn</h5>
-            <a href="https://youtube.com/@gatech-sos?si=ASUbCHs6OnCEWLdl" target="_blank" class="btn btn-warning">Connect With Us</a>
+            <a href="https://www.linkedin.com/in/golden-apple-technologies-international-b71296387?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="btn btn-warning">Connect With Us</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card card-platform p-4 text-center">
             <h5 class="card-title">YouTube</h5>
-            <a href="#" target="_blank" class="btn btn-warning">Subscribe</a>
+            <a href="https://youtube.com/@gatech-sos?si=ASUbCHs6OnCEWLdl" target="_blank" class="btn btn-warning">Subscribe</a>
           </div>
         </div>
       </div>
