--- a/index.html
+++ b/index.html
@@ -1,248 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Golden Apple Compilers | Html</title>
-    <style>
-        /* CSS for editor */
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 100vh;
-            width: 100vw;
-        }
-
-        #inputSection {
-            height: 100vh;
-            width: 100vw;
-        }
-
-        #highlight {
-            position: absolute;
-            width: 100%;
-            height: calc(100vh - 100px);
-            padding: 10px;
-            font-size: 16px;
-            font-family: cursive;
-            white-space: pre-wrap;
-            overflow-wrap: break-word;
-            pointer-events: none;
-        }
-
-        #htmlCode {
-            position: relative;
-            width: 100%;
-            height: calc(1000vh - 100px);
-            padding: 10px;
-            font-size: 16px;
-            font-family: monospace;
-            background-color: black;    color: cyan;
-            caret-color: white;
-            font-weight: bolder;
-        }
-
-        #outputSection {
-            display: none;
-        }
-
-        iframe {
-            width: 100vw;
-            height: calc(1000vh - 50px);
-            border: none;
-        }
-
-#i, #un, #backButton{
-    width: 65px;
-    height: 30px;
-    font-size: 16px;
-    cursor: pointer;
-    background: #146c76a0;
-    position: fixed;
-    top: 10px;
-        border-radius: 10px;
-    z-index: 1000;
-}
-#i, #backButton{right: 10px;
-}
-        .fas{font-size: 30px; color: #fff100cb; margin-left: 1px;}
-        #un{right: 90px;
-}
-        #myModal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            padding-top: 50px;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: #ffffff1b;
-        }
-        .modal-content {
-            background-color: #ffffff1b;
-                    margin: auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 96%;
-        }
-        </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Golden Apple Technologies</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body { font-family: 'Rajdhani', sans-serif; background: #111; color: #eee; }
+    .header { padding: 1rem 2rem; background: #222; display: flex; align-items: center; justify-content: space-between; }
+    .logo { font-size: 1.5rem; color: #ffd700; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; }
+    .nav-actions { display: flex; gap: 1rem; }
+    .menu-btn { background: #ffd700; color: #222; border: none; border-radius: 8px; padding: 0.5rem 1rem; font-weight: bold; cursor: pointer; transition: background 0.2s; }
+    .menu-btn:hover { background: #ffea70; }
+    .main-content { padding: 2rem; max-width: 900px; margin: auto; }
+    .card { background: #222; padding: 1.5rem; border-radius: 1rem; margin-bottom: 2rem; }
+    .stats-grid, .features-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(160px,1fr)); gap: 1rem; }
+    .stat-card, .feature-card { background: #333; padding: 1rem; border-radius: 0.75rem; text-align: center; transition: box-shadow 0.2s; }
+    .feature-card:hover { box-shadow: 0 0 10px #ffd70055; }
+    .feature-icon { font-size: 2rem; margin-bottom: 0.5rem; }
+    .feature-link { color: inherit; text-decoration: none; display: block; }
+    /* Modal beautification */
+    .modal { display: none; position: fixed; z-index: 100; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0,0,0,0.7); }
+    .modal-content {
+      background: linear-gradient(135deg, #222 80%, #ffd700 100%);
+      color: #fff; margin: 10vh auto; padding: 2.5rem 2rem; border-radius: 1.5rem; max-width: 420px; box-shadow: 0 0 40px #ffd70066;
+      display: flex; flex-direction: column; align-items: center; gap: 1.5rem;
+    }
+    .modal-content h2 { font-size: 1.7rem; color: #ffd700; margin-bottom: 1rem; }
+    .modal-list { list-style: none; padding: 0; margin: 0; width: 100%; }
+    .modal-list li { display: flex; align-items: center; gap: 1rem; padding: 0.6rem 0 0.6rem 0.2rem; border-bottom: 1px solid #ffd70033; }
+    .modal-list li:last-child { border-bottom: none; }
+    .modal-list i { font-size: 1.2rem; color: #ffd700; }
+    .close-btn {
+      background: #ffd700; color: #222; border: none; border-radius: 8px; padding: 0.5rem 1.5rem; font-weight: bold; margin-top: 1rem; cursor: pointer;
+      box-shadow: 0 2px 8px #ffd70033; transition: background 0.2s;
+    }
+    .close-btn:hover { background: #ffea70; }
+    .show { display: block; }
+  </style>
 </head>
 <body>
-<div id="inputSection">
-<button id="un" onclick="document.getElementById('myModal').style.display='block'"><i class="fas fa-globe"></i></button> 
-<button id="i" onclick="runCode()"><i class="fas fa-play"></i></button>
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-<i class="fas fa-crown"></i>
-<h1>𝖈𝖔𝖒𝖕𝖑𝖎𝖊𝖗 𝖕𝖗𝖊𝖒𝖎𝖚𝖒</h1>  <br>
-<blockquote>UPGRADE TO COMPLIER PRO TO ACCES VIEW FROM WEB</blockquote><ul>
-<h2>ᵒᵗʰᵉʳ ᵖʳᵉᵐⁱᵘᵐ ᶠᵉᵃᵗᵘʳᵉˢ</h2>
-<li>Save file-Html file creator</li>
-<li>Assistant-AI code helper</li>
-<li>Console-Error Check</li>
-</ul><br>
-<div id="pkg">Annual Plan-$5
-<br><sup>5USD</sup></div>
-<div id="pkg">Lifetime Plan-$10<br><sup>10USD</sup></div>
-<button class="buy" onclick="alert('Service will be available soon')">BUY PLAN</button>
-            <button onclick="document.getElementById('myModal').style.display='none'" class="close">CONTINUE FREE</button>
-</div>
+  <header class="header">
+    <a href="#" class="logo"><i class="fas fa-apple-alt"></i> GOLDEN APPLE</a>
+    <div class="nav-actions">
+      <button class="menu-btn" onclick="showModal()"><i class="fas fa-bars"></i> Menu</button>
     </div>
-    <div style="position: relative;">
-        <textarea id="htmlCode" oninput="highlightCode()" value=""></textarea>
-        <div id="highlight"></div>
+  </header>
+
+  <main class="main-content">
+    <div class="card">
+      <h2>Golden Apple Technologies Services</h2>
+      <p>Welcome Developers! Let's build something amazing together.</p>
+      <div class="stats-grid">
+        <div class="stat-card"><span>99+</span><div>Subscribers</div></div>
+        <div class="stat-card"><span>100%</span><div>Security</div></div>
+        <div class="stat-card"><span>Icii</span><div>Developer</div></div>
+        <div class="stat-card"><span>100%</span><div>Secure</div></div>
+      </div>
     </div>
-</div>
-<div id="outputSection" style="display: none;"><button id="backButton" onclick="goBack()"><i class="fas fa-edit"></i></button>
 
-    <iframe id="output"></iframe>
-</div>
-<script>
- #include <iostream>
-#include <algorithm>
+    <div class="card">
+      <h2>Golden Apple Features</h2>
+      <div class="features-grid">
+        <a class="feature-link" href="qrcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-qrcode"></i></div>QR CODE</div></a>
+        <a class="feature-link" href="barcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-barcode"></i></div>BAR CODE</div></a>
+        <a class="feature-link" href="smart.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-laptop"></i></div>SMART HOME</div></a>
+        <a class="feature-link" href="vr.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-vr-cardboard"></i></div>VIRTUAL REALITY</div></a>
+        <a class="feature-link" href="joystick.html"><div class="feature-card"><div class="feature-icon"><i class="fab fa-bluetooth"></i></div>BLUETOOTH JOYSTICK</div></a>
+        <a class="feature-link" href="bible.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book-bible"></i></div>BIBLE SEARCH</div></a>
+        <a class="feature-link" href="quran.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-quran"></i></div>QUR'AN SEARCH</div></a>
+        <a class="feature-link" href="imageit.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-image"></i></div>DR IMAGE IT</div></a>
+        <a class="feature-link" href="learncoding.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-code"></i></div>LEARN CODING</div></a>
+        <a class="feature-link" href="t2s.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-music"></i></div>TEXT TO SPEECH</div></a>
+        <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-video"></i></div>LIVE STREAMING</div></a>
+        <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-gamepad"></i></div>ONLINE GAMES</div></a>
+      </div>
+    </div>
+  </main>
 
-int main() {
-    int n, key;
-    std::cout << "Enter array size: ";
-    std::cin >> n;
-    int arr[100];
-    std::cout << "Enter sorted elements: ";
-    for (int i = 0; i < n; i++) {
-        std::cin >> arr[i];
-    }
-    std::cout << "Enter key to search: ";
-    std::cin >> key;
-    int left = 0, right = n - 1, mid, pos = -1;
-    while (left <= right) {
-        mid = (left + right) / 2;
-        if (arr[mid] == key) {
-            pos = mid;
-            break;
-        } else if (arr[mid] < key)
-            left = mid + 1;
-        else
-            right = mid - 1;
-    }
-    if (pos != -1)
-        std::cout << "Found at position: " << pos << std::endl;
-    else
-        std::cout << "Not found" << std::endl;
-    return 0;
-}
-</script>
-    <script>
-     function runCode() {
-    const htmlCode = document.getElementById('htmlCode').value;
-    const output = document.getElementById('output');
-    const inputSection = document.getElementById('inputSection');
-    const outputSection = document.getElementById('outputSection');
-    inputSection.style.display = 'none';
-    outputSection.style.display = 'block';
-    output.srcdoc = htmlCode;
-}
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <h2><i class="fas fa-crown"></i> Premium Features</h2>
+      <ul class="modal-list">
+        <li><i class="fas fa-file-code"></i> Save file - Html file creator</li>
+       <a href="coder.html"><li><i class="fas fa-robot"></i> Assistant - AI code helper</li></a>
+        <li><i class="fas fa-terminal"></i> Console - Error Check</li>
+      <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
+      </ul>
+      <button class="close-btn" onclick="hideModal()">Close</button>
+    </div>
+  </div>
 
-function goBack() {
-    const output = document.getElementById('output');
-    const inputSection = document.getElementById('inputSection');
-    const outputSection = document.getElementById('outputSection');
-    outputSection.style.display = 'none';
-    inputSection.style.display = 'block';
-}
-
-function highlightCode() {
-    const code = document.getElementById('htmlCode').value;
-    const highlight = document.getElementById('highlight');
-    let highlightedCode = '';
-    const regex = /<(\w+)[^>]*>|<\/(\w+)>/g;
-    let match;
-    let lastIndex = 0;
-    while ((match = regex.exec(code)) !== null) {
-        highlightedCode += code.substring(lastIndex, match.index);
-        highlightedCode += `<span style="color: orange"><${match[1] || match[2]}</span>`;
-        if (match[0].includes('/')) {
-            highlightedCode += '</span>';
-        } else {
-            highlightedCode += match[0].substring(match[1].length + 1).replace('>', '></span>');
-        }
-        lastIndex = match.index + match[0].length;
-    }
-    highlightedCode += code.substring(lastIndex);
-    highlight.innerHTML = highlightedCode;
-}
-
-document.addEventListener('DOMContentLoaded', function() {
-    const initialCode = `<!DOCTYPE HTML>
-<Html lang="en">
-<Head>
-<Meta charset="UTF-8">
-<Title> Hello World </Title>
-</Head>
-<Body>
-<H1>HELLO WORLD</H1>
-<!-- Delete whole text and paste yours or test your code from here -->
-
-</Body>
-</Html>`;
-    document.getElementById('htmlCode').value = initialCode;
-    highlightCode();
-    document.getElementById('htmlCode').focus();
-    document.getElementById('htmlCode').setSelectionRange(initialCode.length - 15, initialCode.length - 15);
-});
-
-const buttons = document.querySelectorAll('button');
-
-buttons.forEach(button => {
-    let offsetX, offsetY;
-
-    button.addEventListener('mousedown', (e) => {
-        const rect = button.getBoundingClientRect();
-        offsetX = e.clientX - rect.left;
-        offsetY = e.clientY - rect.top;
-
-        button.style.position = 'fixed';
-        button.style.left = `${e.clientX - offsetX}px`;
-        button.style.top = `${e.clientY - offsetY}px`;
-
-        document.addEventListener('mousemove', moveHandler);
-        document.addEventListener('mouseup', upHandler);
-    });
-
-    const moveHandler = (e) => {
-        button.style.left = `${e.clientX - offsetX}px`;
-                button.style.top = `${e.clientY - offsetY}px`;
-    };
-
-    const upHandler = () => {
-        document.removeEventListener('mousemove', moveHandler);
-        document.removeEventListener('mouseup', upHandler);
-    };
-});
-</script>
+  <script>
+    function showModal() { document.getElementById('modal').classList.add('show'); }
+    function hideModal() { document.getElementById('modal').classList.remove('show'); }
+  </script>
 </body>
 </html>
