--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a class="feature-link" href="bible.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book-bible"></i></div>BIBLE SEARCH</div></a>
         <a class="feature-link" href="quran.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-quran"></i></div>QUR'AN SEARCH</div></a>
         <a class="feature-link" href="imageit.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-image"></i></div>DR IMAGE IT</div></a>
-        <a class="feature-link" href="learncoding.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-code"></i></div>LEARN CODING</div></a>
+        <a class="feature-link" href="iam.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-code"></i></div>LEARN CODING</div></a>
         <a class="feature-link" href="t2s.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-music"></i></div>TEXT TO SPEECH</div></a>
         <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-video"></i></div>LIVE STREAMING</div></a>
         <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-gamepad"></i></div>ONLINE GAMES</div></a>
