--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="features-grid">
         <a class="feature-link" href="qrcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-qrcode"></i></div>QR CODE</div></a>
         <a class="feature-link" href="barcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-barcode"></i></div>BAR CODE</div></a>
-        <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-laptop"></i></div>ONLINE DICTIONARY</div></a>
+        <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
         <a class="feature-link" href="vr.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-vr-cardboard"></i></div>VIRTUAL REALITY</div></a>
         <a class="feature-link" href="joystick.html"><div class="feature-card"><div class="feature-icon"><i class="fab fa-bluetooth"></i></div>BLUETOOTH JOYSTICK</div></a>
         <a class="feature-link" href="bible.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book-bible"></i></div>BIBLE SEARCH</div></a>
@@ -74,8 +74,7 @@
         <a class="feature-link" href="imageit.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-image"></i></div>DR IMAGE IT</div></a>
         <a class="feature-link" href="iam.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-code"></i></div>LEARN CODING</div></a>
         <a class="feature-link" href="tts.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-music"></i></div>TEXT TO SPEECH</div></a>
-        <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-video"></i></div>LIVE STREAMING</div></a>
-        <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-gamepad"></i></div>ONLINE GAMES</div></a>
+             <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-gamepad"></i></div>ONLINE GAMES</div></a>
       </div>
     </div>
   </main>
