--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
   <div id="modal" class="modal">
     <div class="modal-content">
-      <h2><i class="fas fa-crown"></i> Premium Features</h2>
+      <h2><i class="fas fa-bank"></i>SERVICES</h2>
       <ul class="modal-list">
-        <li><i class="fas fa-file-code"></i> Save file - Html file creator</li>
+        <a href="compiler_html.html"><li><i class="fas fa-file-code"></i> Save file - Html file creator</li></a>
        <a href="coder.html"><li><i class="fas fa-robot"></i> Assistant - AI code helper</li></a>
         <li><i class="fas fa-terminal"></i> Console - Error Check</li>
       <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
