--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="modal-content">
       <h2><i class="fas fa-bank"></i>SERVICES</h2>
       <ul class="modal-list">
-        <a href="compiler_html.html"><li><i class="fas fa-file-code"></i> Save file - Html file creator</li></a>
+        <a href="https://wandbox.org/#"><li><i class="fas fa-file-code"></i> Compiler- Test your coding skills</li></a>
        <a href="coder.html"><li><i class="fas fa-robot"></i> Assistant - AI code helper</li></a>
         <li><i class="fas fa-terminal"></i> Console - Error Check</li>
       <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
