--- a/coder.html
+++ b/coder.html
@@ -111,7 +111,7 @@
 <body>
   <div class="chat-wrapper">
     <div class="chat-header">BOTTY
-    <br><sup>Powered by ChatGPT</sup><img src="favicon.png"></div>
+    <br><sup>Powered by ChatGPT</sup></div>
     <div class="chat-body" id="chatBody">
       <div class="message bot">Hey! I'm Rusty, a Golden Apple Copilot</div>
     </div>
