--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
         <div class="stat-card"><span>100%</span><div>Secure</div></div>
       </div>
     </div>
-
+<!-- Henry Woodworks Ad Modal -->
+<div id="henryAdModal" class="henry-modal">
+  <div class="henry-modal-content">
+    <img src="https://copilot.microsoft.com/th/id/BCO.db038280-ad9d-4d9c-816a-97ce5ac9b2ea.png" alt="Henry Woodworks Ad" class="henry-ad-bg" />
+    <div class="henry-ad-overlay">
+      <h1>HENRY WOODWORKS</h1>
+      <p>Located in Ntwetwe, Kyankwanzi, Uganda</p>
+      <p>📞 Contact: +256 779 877039</p>
+    </div>
+    <button id="henryCloseBtn" class="henry-close-btn" aria-label="Close Ad">✖</button>
+  </div>
+</div>
     <div class="card">
       <h2>Golden Apple Features</h2>
       <div class="features-grid">
@@ -94,6 +105,7 @@
   <script>
     function showModal() { document.getElementById('modal').classList.add('show'); }
     function hideModal() { document.getElementById('modal').classList.remove('show'); }
+
   </script>
 </body>
 </html>
