--- a/index.html
+++ b/index.html
@@ -105,7 +105,23 @@
   <script>
     function showModal() { document.getElementById('modal').classList.add('show'); }
     function hideModal() { document.getElementById('modal').classList.remove('show'); }
+window.addEventListener("load", () => {
+  setTimeout(() => {
+    const modal = document.getElementById("henryAdModal");
+    const closeBtn = document.getElementById("henryCloseBtn");
+    modal.style.display = "block";
 
+    // Show exit button after 5 seconds
+    setTimeout(() => {
+      closeBtn.style.opacity = 1;
+    }, 5000);
+
+    // Close modal on click
+    closeBtn.addEventListener("click", () => {
+      modal.style.display = "none";
+    });
+  }, 20000); // Show ad after 20 seconds
+});
   </script>
 </body>
 </html>
