--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!-- Henry Woodworks Ad Modal -->
 <div id="henryAdModal" class="henry-modal">
   <div class="henry-modal-content">
-    <img src="https://copilot.microsoft.com/th/id/BCO.db038280-ad9d-4d9c-816a-97ce5ac9b2ea.png" alt="Henry Woodworks Ad" class="henry-ad-bg" />
+    <img src="henry.jpeg" alt="Henry Woodworks Ad" class="henry-ad-bg" />
     <div class="henry-ad-overlay">
       <h1>HENRY WOODWORKS</h1>
       <p>Located in Ntwetwe, Kyankwanzi, Uganda</p>
