--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 <!-- Henry Woodworks Ad Modal -->
-<div id="henryAdModal" class="henry-modal">
+<div id="henryAdModal" class="henry-modal" hidden>
   <div class="henry-modal-content">
     <img src="henry.jpeg" alt="Henry Woodworks Ad" class="henry-ad-bg" />
     <div class="henry-ad-overlay">
