--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <p>Located in Ntwetwe, Kyankwanzi, Uganda</p>
       <p>📞 Contact: +256 779 877039</p>
     </div>
-    <button id="henryCloseBtn" class="henry-close-btn" aria-label="Close Ad">✖</button>
+    <button id="henryCloseBtn" class="henry-close-btn" aria-label="Close Ad">✘</button>
   </div>
 </div>
     <div class="card">
