--- a/about.html
+++ b/about.html
@@ -63,11 +63,11 @@
   <!-- SIDEBAR -->
   <div id="sidebar" class="sidebar">
     <h2 class="text-xl font-bold mb-4 header-glow">Menu</h2>
-    <a href="#" onclick="showSection('history')">📜 History</a>
-    <a href="#" onclick="showSection('vision')">🚀 Vision</a>
-    <a href="#" onclick="showSection('team')">👥 Officials</a>
-    <a href="#" onclick="showSection('comments')">💬 Comments</a>
-    <a href="#" onclick="showSection('social')">🌐 Social Media</a>
+    <a href="#" onclick="showSection('history')">Info</a>
+    <a href="#" onclick="showSection('vision')"> Vision</a>
+    <a href="#" onclick="showSection('team')"> Officials</a>
+    <a href="#" onclick="showSection('comments')">Leave a Comment</a>
+    <a href="#" onclick="showSection('social')"> Social Media Platforms</a>
   </div>
 
   <!-- MAIN CONTENT -->
@@ -78,7 +78,7 @@
       <p class="text-lg mb-4">
         Golden Apple Technologies was born in Kampala from the mentorship of CEO Nathan. What started as a coding dream has evolved into a tech empire—empowering youth, building tools like Codemind VOL 23.0, and launching platforms like iAM Scholar.
       </p>
-<img src="https://images.unsplash.com/photo-1581090700227-1e7b6c7e7f4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80" alt="Tech Team Collaboration" class="history-img" />            <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80" alt="Coding Innovation" class="history-img" />    </section>
+<img src="history1.jpeg" alt="Tech Team Collaboration" class="history-img" />            <img src="history2.jpeg" alt="Coding Innovation" class="history-img" />    </section>
 
     <!-- VISION -->
     <section id="vision" class="section">
@@ -94,7 +94,7 @@
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
           <div class="card bg-gray-800 text-white">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="ICII">
+            <img src="bot.jpeg" class="card-img-top" alt="ICII">
             <div class="card-body">
               <h5 class="card-title">ICII</h5>
               <p class="card-text">Lead Architect & Visionary</p>
@@ -104,7 +104,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card bg-gray-800 text-white">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Dizzer J">
+            <img src="dizzer.jpeg" class="card-img-top" alt="Dizzer J">
             <div class="card-body">
               <h5 class="card-title">Dizzer J</h5>
               <p class="card-text">Co-Director & Music Producer</p>
@@ -114,21 +114,21 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card bg-gray-800 text-white">
-            <img src="https://gregorysteve.rf.gd/?i=1" class="card-img-top" alt="Gregory">
+            <img src="witness.jpeg" class="card-img-top" alt="Gregory">
             <div class="card-body">
               <h5 class="card-title">Gregory Steve</h5>
               <p class="card-text">Head of Development</p>
-              <a href="https://gregorysteve.rf.gd" class="btn btn-warning">More</a>
+              <a href="#" class="btn btn-warning">More</a>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card bg-gray-800 text-white">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Whole Team">
+            <img src="team.jpeg" alt="Whole Team">
             <div class="card-body">
               <h5 class="card-title">Whole Team</h5>
               <p class="card-text">Full Golden Apple Crew</p>
-              <a href="whole_team.html" class="btn btn-warning">More</a>
+              <a href="team.html" class="btn btn-warning">More</a>
             </div>
           </div>
         </div>
