--- a/about.html
+++ b/about.html
@@ -114,9 +114,9 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card bg-gray-800 text-white">
-            <img src="witness.jpeg" class="card-img-top" alt="Gregory">
+            <img src="witness.jpeg" class="card-img-top" alt="witness">
             <div class="card-body">
-              <h5 class="card-title">Gregory Steve</h5>
+              <h5 class="card-title">Alpha</h5>
               <p class="card-text">Head of Development</p>
               <a href="#" class="btn btn-warning">More</a>
             </div>
