--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     <a href="#" onclick="showSection('history')">Info</a>
     <a href="#" onclick="showSection('vision')"> Vision</a>
     <a href="#" onclick="showSection('team')"> Officials</a>
-    <a href="#" onclick="showSection('comments')">Leave a Comment</a>
+    <a href="feedback.html">Leave a Comment</a>
     <a href="#" onclick="showSection('social')"> Social Media Platforms</a>
   </div>
 
