--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     <a href="#" onclick="showSection('history')">Info</a>
     <a href="#" onclick="showSection('vision')"> Vision</a>
     <a href="#" onclick="showSection('team')"> Officials</a>
-    <a href="feedback.html">Leave a Comment</a>
+    <a href="#" onclick="showSection('comments')">Leave a Comment</a>
     <a href="#" onclick="showSection('social')"> Social Media Platforms</a>
   </div>
 
@@ -74,7 +74,7 @@
   <div class="container mt-4">
     <!-- HISTORY -->
     <section id="history" class="section active">
-      <h1 class="text-3xl font-bold mb-3 header-glow">Our History</h1>
+      <h1 class="text-3xl font-bold mb-3 header-glow">About Golden Apple</h1>
       <p class="text-lg mb-4">
         Golden Apple Technologies was born in Kampala from the mentorship of CEO Nathan. What started as a coding dream has evolved into a tech empire—empowering youth, building tools like Codemind VOL 23.0, and launching platforms like iAM Scholar.
       </p>
