--- a/games.html
+++ b/games.html
@@ -87,9 +87,14 @@
       <button onclick="launchGame('guess.html')">Play Now</button>
     </div>
     <div class="card">
-      <h3>Quiz Game</h3>
+      <h3>Guess the Number</h3>
+      <p>Can you find the hidden number?</p>
+      <button onclick="launchGame('guess.html')">Play Now</button>
+    </div>
+    <div class="card">
+      <h3>Word Scramble Game</h3>
       <p>Test your knowledge and win!</p>
-      <button onclick="launchGame('quiz.html')">Play Now</button>
+      <button onclick="launchGame('scramble.html')">Play Now</button>
     </div>
     <div class="card">
       <h3>Memory Match</h3>
