--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <p>Located in Ntwetwe, Kyankwanzi, Uganda</p>
       <p>📞 Contact: +256 779 877039</p>
     </div>
-    <button id="henryCloseBtn" class="henry-close-btn" aria-label="Close Ad">✘</button>   <a href="feedback.html"><button class="henry-close-btn" >Ads</button></a>
+    <button id="henryCloseBtn" class="henry-close-btn" aria-label="Close Ad">✘</button>   <a href="feedback.html"><button class="henry-close-btn" style="background: green; margin-left: 20px;">Ads</button></a>
   </div>
 </div>
     <div class="card">
