--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a class="feature-link" href="imageit.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-image"></i></div>DR IMAGE IT</div></a>
         <a class="feature-link" href="iam.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-code"></i></div>LEARN CODING</div></a>
         <a class="feature-link" href="tts.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-music"></i></div>TEXT TO SPEECH</div></a>
-             <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-gamepad"></i></div>ONLINE GAMES</div></a>
+             <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas">&#127918;</i></div>ONLINE GAMES</div></a>
       </div>
     </div>
   </main>
