--- a/accounts.html
+++ b/accounts.html
@@ -20,7 +20,7 @@
       <ul id="accountList" class="account-list"></ul>
     </section>
   </main>
-<script src="drive.js">
+<script src="drive.js"></script>
   <script>
     function getAccounts() {
       return JSON.parse(localStorage.getItem('goldriveAccounts') || '[]');
