--- a/accounts.html
+++ b/accounts.html
@@ -43,7 +43,7 @@
 
     function switchAccount(username) {
       localStorage.setItem('goldriveCurrentUser', username);
-      window.location.href = 'index.html';
+      window.location.href = 'drive.html';
     }
 
     function deleteAccount(username) {
