--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a class="feature-link" href="bible.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book-bible"></i></div>BIBLE SEARCH</div></a>
         <a class="feature-link" href="quran.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-quran"></i></div>QUR'AN SEARCH</div></a>
         <a class="feature-link" href="imageit.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-image"></i></div>DR IMAGE IT</div></a>
-        <a class="feature-link" href="drive.html"><div class="feature-card"><div class="feature-icon"><i class="fas">&#9729;</i></div>GOLDRIVE CLOUD</div></a>
+        <a class="feature-link" href="drive.html"><div class="feature-card"><div class="feature-icon"><i class="fas"><img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Google_Drive_logo.png" alt="Google Drive" width="24" /></i></div>GOLDRIVE CLOUD</div></a>
         <a class="feature-link" href="iam.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-code"></i></div>LEARN CODING</div></a>
         <a class="feature-link" href="tts.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-music"></i></div>TEXT TO SPEECH</div></a>
              <a class="feature-link" href="games.html"><div class="feature-card"><div class="feature-icon"><i class="fas">&#127918;</i></div>ONLINE GAMES</div></a>
