--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <ul class="modal-list">
         <a href="https://wandbox.org/#"><li><i class="fas fa-file-code"></i> Compiler- Test your coding skills</li></a>
        <a href="coder.html"><li><i class="fas fa-robot"></i> Assistant - AI code helper</li></a>
-        <li><i class="fas fa-terminal"></i> Console - Error Check</li>
+      <a href="comments.html"><li><i class="fas fa-message"></i> User Experience - Feedback</li></a>
       <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
       </ul>
       <button class="close-btn" onclick="hideModal()">Close</button>
