--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <a href="#" class="logo"><i class="fas fa-apple-alt"></i> GOLDEN APPLE</a>
     <div class="nav-actions">
-      <button class="menu-btn" onclick="showModal()"><i class="fas fa-bars"></i> Menu</button>
+      <button class="menu-btn" onclick="showModal()"><i class="fas fa-bars"></i></button>
     </div>
   </header>
 
